tdf#93520 : Mirrored page margin tooltip

Change-Id: I5cf0c7eeba204d4493ae1f4229718faf870a5528